--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -7,7 +7,7 @@
   z-index: 100;
   opacity: 0;
   pointer-events: none;
-
+  padding: var(--container-offset);
   backdrop-filter: blur(10px);
   background: rgba(0, 0, 0, 0.5);
 
@@ -22,6 +22,11 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 6rem;
+    gap: 3rem;
+
+    @include mobile {
+      align-items: flex-start;
+    }
   }
   &__title {
     margin: 0;
