--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,22 +3,22 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__container">
-      <a class="footer__logo">
+      <a class="footer__logo" data-animate="fade-in-up" data-delay="0">
         <img src="./img/logo.svg" alt="logo">
       </a>
 
-      <div class="footer__block">
-        <div>
+      <div class="footer__block" data-animate="fade-in-up" data-delay="200">
+        <div data-animate="fade-in-up" data-delay="300">
           <a href="#" class="footer__link link-btn" data-target="modal-info">
             Юридическая информация
           </a>
         </div>
-        <div>
+        <div data-animate="fade-in-up" data-delay="400">
           <a href="#" class="footer__link link-btn" data-target="modal-policy">
             Политика конфиденциальности
           </a>
         </div>
-        <div>
+        <div data-animate="fade-in-up" data-delay="500">
           <a href="#" class="footer__link link-btn" data-target="modal-agreement">
             Пользовательское соглашение
           </a>
