--- a/src/partials/format.html
+++ b/src/partials/format.html
@@ -1,11 +1,11 @@
 <section class="format">
   <div class="container">
-    <h2 class="title3 format__title">Выбери свой&nbsp;формат
+    <h2 class="title3 format__title" data-animate="fade-in-up" data-delay="0">Выбери свой&nbsp;формат
     </h2>
   </div>
-  <div class="format__slider">
+  <div class="format__slider" data-animate="fade-in-up" data-delay="200">
     <div class="format__viewport">
-      <div class="format__item f-item f-item--light">
+      <div class="format__item f-item f-item--light" data-animate="fade-in-up" data-delay="300">
         <div class="f-item__content">
           <p class="f-item__title">Просто посмотреть
           </p>
@@ -31,7 +31,7 @@
           </picture>
         </div>
       </div>
-      <div class="format__item f-item f-item--green">
+      <div class="format__item f-item f-item--green" data-animate="fade-in-up" data-delay="400">
         <div class="f-item__content">
           <p class="f-item__title">С поддержкой
 
@@ -58,7 +58,7 @@
           </picture>
         </div>
       </div>
-      <div class="format__item f-item f-item--yellow">
+      <div class="format__item f-item f-item--yellow" data-animate="fade-in-up" data-delay="500">
         <div class="f-item__content">
           <p class="f-item__title">VIP-формат
           </p>
