--- a/src/partials/get.html
+++ b/src/partials/get.html
@@ -1,12 +1,13 @@
 <section class="get">
   <div class="container">
-    <h2 class="title3 get__title centered">Что&nbsp;ты&nbsp;получишь на&nbsp;курсе
+    <h2 class="title3 get__title centered" data-animate="fade-in-up" data-delay="0">Что&nbsp;ты&nbsp;получишь
+      на&nbsp;курсе
     </h2>
   </div>
-  <div class="get__slider swiper">
+  <div class="get__slider swiper" data-animate="fade-in-up" data-delay="200">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <div class="get__item get-item">
+        <div class="get__item get-item" data-animate="fade-in-up" data-delay="100">
           <p class="get-item__title">
             Где&nbsp;брать идеи и&nbsp;как&nbsp;набирать просмотры
           </p>
@@ -19,7 +20,7 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="get__item get-item">
+        <div class="get__item get-item" data-animate="fade-in-up" data-delay="200">
           <p class="get-item__title">
             Уверенное понимание, как&nbsp;пользоваться камерой
 
@@ -33,7 +34,7 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="get__item get-item">
+        <div class="get__item get-item" data-animate="fade-in-up" data-delay="300">
           <p class="get-item__title">
             Как&nbsp;удерживать внимание зрителя
 
@@ -47,7 +48,7 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="get__item get-item">
+        <div class="get__item get-item" data-animate="fade-in-up" data-delay="400">
           <p class="get-item__title">
             Как&nbsp;выстраивать выразительные, красивые кадры
           </p>
@@ -60,7 +61,7 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="get__item get-item">
+        <div class="get__item get-item" data-animate="fade-in-up" data-delay="500">
           <p class="get-item__title">
             Как&nbsp;писать сценарии для&nbsp;коротких
             видео
