--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,23 +3,24 @@
     <div class="container">
       <div class="hero__container">
         <div class="hero__content">
-          <h1 class="title1 hero__title">
+          <h1 class="title1 hero__title" data-animate="fade-in-up" data-delay="0">
             <span>Снимать</span>
             <span>вов<span class="accent">Се</span></span>
             <span>не тяж<span class="accent">Ко</span></span>
           </h1>
-          <div class="desc1 hero__desc">
+          <div class="desc1 hero__desc" data-animate="fade-in-up" data-delay="200">
             <p>Киношные кадры, цепляющие истории и&nbsp;свой стиль&nbsp;&mdash;&nbsp;даже&nbsp;если&nbsp;ты&nbsp;никогда
               не&nbsp;держал камеру.</p>
             <p>
               Курс от&nbsp;Паши, снятый как&nbsp;мини-фильм, а&nbsp;не&nbsp;как&nbsp;лекция за&nbsp;столом.
             </p>
           </div>
-          <button class="btn btn-reset modal-btn hero__btn" data-target="#modal-cta">
+          <button class="btn btn-reset modal-btn hero__btn" data-animate="bounce-in" data-delay="400"
+            data-target="#modal-cta">
             Начать обучение
           </button>
         </div>
-        <div class="hero__img">
+        <div class="hero__img" data-animate="scale-in" data-delay="300">
           <picture>
             <source srcset="./img/hero-mob.webp" media="(max-width: 576px)" type="image/webp">
             <img src="./img/hero.webp" alt="Снимать вовсе не тяжко">
