--- a/src/partials/hi.html
+++ b/src/partials/hi.html
@@ -1,11 +1,11 @@
 <section class="hi">
   <div class="container">
     <div class="hi__container">
-      <div class="hi__content">
-        <h3 class="title3 title3--accent hi__title">
+      <div class="hi__content" data-animate="fade-in-right" data-delay="0">
+        <h3 class="title3 title3--accent hi__title" data-animate="fade-in-up" data-delay="100">
           Привет, я&nbsp;Паша
         </h3>
-        <div class="desc2 hi__desc">
+        <div class="desc2 hi__desc" data-animate="fade-in-up" data-delay="200">
           <p>Я&nbsp;снимаю короткие ролики, которые выглядят как&nbsp;сцены из&nbsp;кино. Без&nbsp;команды,
             без&nbsp;студии&nbsp;—
             просто с&nbsp;идеей, стилем и&nbsp;опытом.</p>
@@ -17,7 +17,7 @@
         </div>
       </div>
 
-      <div class="hi__img video-wrapper">
+      <div class="hi__img video-wrapper" data-animate="slide-in-bottom" data-delay="300">
         <video src="" poster="./img/hi.webp"></video>
       </div>
     </div>
