--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -1,20 +1,24 @@
 <section class="how">
   <div class="container">
     <div class="how__container">
-      <div class="how__img">
+      <div class="how__img" data-animate="fade-in-left" data-delay="0">
         <img src="./img/how.webp" aria-hidden="true" alt="">
       </div>
-      <div class="how__content">
-        <h2 class="how__title title3">
+      <div class="how__content" data-animate="fade-in-right" data-delay="200">
+        <h2 class="how__title title3" data-animate="fade-in-up" data-delay="100">
           <span>Как</span>
           проходит обучение
         </h2>
-        <ul class="list-reset list how__list">
-          <li><i><img src="./img/icons/camera.webp" alt=""></i> Видеоуроки в&nbsp;стиле мини-фильмов</li>
-          <li><i><img src="./img/icons/calendar.webp" alt=""></i> Еженедельные эфиры с&nbsp;разбором и&nbsp;ответами
+        <ul class="list-reset list how__list" data-animate="fade-in-up" data-delay="300">
+          <li data-animate="fade-in-up" data-delay="400"><i><img src="./img/icons/camera.webp" alt=""></i> Видеоуроки
+            в&nbsp;стиле мини-фильмов</li>
+          <li data-animate="fade-in-up" data-delay="500"><i><img src="./img/icons/calendar.webp" alt=""></i>
+            Еженедельные эфиры с&nbsp;разбором и&nbsp;ответами
           </li>
-          <li><i><img src="./img/icons/micro.webp" alt=""></i> Приглашённые гости</li>
-          <li><i><img src="./img/icons/chat.webp" alt=""></i> Чат&nbsp;для&nbsp;общения и&nbsp;обратной связи</li>
+          <li data-animate="fade-in-up" data-delay="600"><i><img src="./img/icons/micro.webp" alt=""></i> Приглашённые
+            гости</li>
+          <li data-animate="fade-in-up" data-delay="700"><i><img src="./img/icons/chat.webp" alt=""></i>
+            Чат&nbsp;для&nbsp;общения и&nbsp;обратной связи</li>
         </ul>
       </div>
     </div>
