--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,7 +1,7 @@
 <section class="program">
   <div class="container">
     <div class="program__container">
-      <div class="program__content">
+      <div class="program__content" data-animate="fade-in-right" data-delay="0">
         <h2 class="title3 program__title">
           Программа курса
           <span><span class="accent">40+</span> уроков</span>
@@ -21,7 +21,7 @@
         </p>
       </div>
 
-      <div class="program__video video-wrapper">
+      <div class="program__video video-wrapper" data-animate="fade-in-left" data-delay="200">
         <button class="btn-reset video-play">
           <svg class="video-btn__icon">
             <use xlink:href="img/sprite.svg#play"></use>
