--- a/src/partials/ready.html
+++ b/src/partials/ready.html
@@ -2,7 +2,7 @@
   <div class="ready__wrapper">
     <div class="container">
       <div class="ready__container">
-        <div class="ready__content">
+        <div class="ready__content" data-animate="fade-in-up" data-delay="0">
           <h2 class="ready__title title3">
             Готов
             снимать сильно?
