--- a/src/partials/suit.html
+++ b/src/partials/suit.html
@@ -1,11 +1,11 @@
 <section class="suit">
   <div class="container">
     <div class="suit__container">
-      <div class="suit__content">
-        <h2 class="title2 suit__title">
+      <div class="suit__content" data-animate="fade-in-up" data-delay="0">
+        <h2 class="title2 suit__title" data-animate="fade-in-up" data-delay="100">
           Подходит и&nbsp;новичкам, и&nbsp;тем, кто&nbsp;уже снимает
         </h2>
-        <div class="suit__desc desc2">
+        <div class="suit__desc desc2" data-animate="fade-in-up" data-delay="200">
           <p>
             Если&nbsp;ты&nbsp;только начинаешь и&nbsp;не&nbsp;знаешь, с&nbsp;чего&nbsp;начать&nbsp;— этот&nbsp;курс
             для&nbsp;тебя.<br>
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <div class="suit__img">
+      <div class="suit__img" data-animate="rotate-in" data-delay="300">
         <img src="./img/suit.webp" alt="Подходит и новичкам, и тем, кто уже снимает">
       </div>
     </div>
