--- a/src/partials/testi.html
+++ b/src/partials/testi.html
@@ -1,47 +1,47 @@
 <section class="testi">
   <div class="container">
-    <h2 class="title3 testi__title">Отзывы</h2>
+    <h2 class="title3 testi__title" data-animate="fade-in-up" data-delay="0">Отзывы</h2>
   </div>
 
-  <div class="testi__slider swiper">
+  <div class="testi__slider swiper" data-animate="fade-in-up" data-delay="200">
     <div class="swiper-wrapper">
       <div class="swiper-slide" data-fancybox="gallery" data-src="./img/testi/01.webp">
-        <div class="testi__item">
+        <div class="testi__item" data-animate="fade-in-up" data-delay="300">
           <img src="./img/testi/01.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./cover.mp4">
-        <div class="testi__item testi__item--video">
+        <div class="testi__item testi__item--video" data-animate="fade-in-up" data-delay="400">
           <img src="./img/testi/02.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./img/testi/01.webp">
-        <div class="testi__item">
+        <div class="testi__item" data-animate="fade-in-up" data-delay="500">
           <img src="./img/testi/01.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./cover.mp4">
-        <div class="testi__item testi__item--video">
+        <div class="testi__item testi__item--video" data-animate="fade-in-up" data-delay="600">
           <img src="./img/testi/03.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./img/testi/01.webp">
-        <div class="testi__item">
+        <div class="testi__item" data-animate="fade-in-up" data-delay="700">
           <img src="./img/testi/01.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./cover.mp4">
-        <div class="testi__item testi__item--video">
+        <div class="testi__item testi__item--video" data-animate="fade-in-up" data-delay="800">
           <img src="./img/testi/02.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./img/testi/01.webp">
-        <div class="testi__item">
+        <div class="testi__item" data-animate="fade-in-up" data-delay="900">
           <img src="./img/testi/01.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide" data-fancybox="gallery" data-src="./cover.mp4">
-        <div class="testi__item testi__item--video">
+        <div class="testi__item testi__item--video" data-animate="fade-in-up" data-delay="1000">
           <img src="./img/testi/03.webp" alt="">
         </div>
       </div>
